--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://www.tiktok.com/@flowsideee/video/7228432282988645633",
+    "url": "https://vm.tiktok.com/ZGeypu4d5/",
     "service": "Views",
     "proxy": null,
     "captcha_auto_solve": true
