--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://vm.tiktok.com/ZGeypu4d5/",
+    "url": "https://vm.tiktok.com/ZGeyK7vTT/",
     "service": "Views",
     "proxy": null,
     "captcha_auto_solve": true
