--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://vm.tiktok.com/ZGefAfLsE/",
+    "url": "https://vm.tiktok.com/ZGefU23wp/",
     "service": "Views",
     "proxy": null,
     "captcha_auto_solve": true
